0.4:
 * GAMEPLAY:
 - Zombies WILL target you in crowd if you shoot them
 * PLUGIN:
 - Ranking now show Kill/Death ratio and Win/Lost ratio
 - Added a column on dotamine's table on MySQL: "lhs" - this will save last hits

0.3.1:
 * GAMEPLAY:
 - Fixed Shadow Blade duration
 - Chats are now shown on Console
 - /Dota tp will consume only ONE paper now
 - Tp is now correctly cancelled
 * PLUGIN:
 - Fixed NullPointerException when attacking skeletons and when skeleton attacking Players
 - Added Signs to join spectator, ranged or meele, and when ingame, to Shop (Sign's first line must be [Dota], second "Join"/"Shop", third "Ranged"/"Meele"/"Spectator"
 - If queue is full, the game will start
 - Respawn effect will be executed on Respawn Location with -1 Y instead of Players' location

0.3:
 * GAMEPLAY:
 - Added /dota tp (bot/top/mid/base) - this will require a PAPER on player's HAND / Cooldown: 90 sec / Canceled on damage
 - Added Force Staff: left clicking Diamond Hoe - Thank you, https://github.com/Eniripsa96/EnchantmentPack/blob/master/EnchantActivePack/src/com/sucy/active/enchants/Dash.java#L52
 - Added Heart of Tarrasque: left click on inventory to use - it will regen your health until you receive damage
 - Added Smoke of Deceit: make allies near you invisible for 40 seconds - single use - smoke is still shown, use to run away // Item "30" - WEB - cooldown: 90 sec
 - Better spectator mode (right click = forward on Players' list | left click = backward on Players' list)
 - Spectator delay: delay between teleports, 3 seconds
 - Better /spectate command - when leave, you will gain Resistance 100 because you will receive a huge Fall Damage
 - Last hit money: creeps -> from 42 to 52 | jungle -> from 83 to 94 (random value between and including that)
 - If a ranged attacks with iron/gold/diamond sword, won't deal any damage
 - People now receive money for destroying towers (from 130 to 180)
 - Lane zombies will target you if no near targets are found