@@ -44,13 +44,13 @@ import org.bukkit.util.Vector;
  * @author Rafael
  */
 public class PlayerListener implements Listener {
-
+    
     private final DotaMine pl;
-
+    
     public PlayerListener(DotaMine pl) {
         this.pl = pl;
     }
-
+    
     @EventHandler
     public void onJoin(PlayerJoinEvent e) {
         Player p = e.getPlayer();
@@ -83,7 +83,7 @@ public class PlayerListener implements Listener {
             }
         }
     }
-
+    
     @EventHandler
     public void onQuit(PlayerQuitEvent e) {
         Player p = e.getPlayer();
@@ -93,9 +93,9 @@ public class PlayerListener implements Listener {
             pl.broadcast(pl.getLang("lang.onePlayerLeft"));
             pl.endGame(true, 0);
         }
-
+        
     }
-
+    
     @EventHandler
     public void onKick(PlayerKickEvent e) {
         Player p = e.getPlayer();
@@ -106,7 +106,7 @@ public class PlayerListener implements Listener {
             pl.endGame(true, 0);
         }
     }
-
+    
     @EventHandler
     public void onPickUp(PlayerPickupItemEvent e) {
         Player p = e.getPlayer();
@@ -114,36 +114,43 @@ public class PlayerListener implements Listener {
             e.setCancelled(true);
         }
     }
-
+    
     @EventHandler
     public void onMove(PlayerMoveEvent e) {
         Player p = e.getPlayer();
         if (pl.ingameList.containsKey(p)) {
-            if (p.getLocation().distance(pl.blueDeploy) < 5) {
+            if (p.getLocation().distance(pl.blueDeploy) < 8) {
                 if (pl.ingameList.get(p).getTeam() == 1) {
-                    p.addPotionEffect(new PotionEffect(PotionEffectType.REGENERATION, 5, 2), true);
+                    p.addPotionEffect(new PotionEffect(PotionEffectType.REGENERATION, 5, 2), false);
                 } else {
-                    p.addPotionEffect(new PotionEffect(PotionEffectType.POISON, 10, 1), true);
+                    p.addPotionEffect(new PotionEffect(PotionEffectType.POISON, 10, 2), false);
                 }
-            } else if (p.getLocation().distance(pl.redDeploy) < 5) {
+            } else if (p.getLocation().distance(pl.redDeploy) < 8) {
                 if (pl.ingameList.get(p).getTeam() == 2) {
-                    p.addPotionEffect(new PotionEffect(PotionEffectType.REGENERATION, 5, 2), true);
+                    p.addPotionEffect(new PotionEffect(PotionEffectType.REGENERATION, 5, 2), false);
                 } else {
-                    p.addPotionEffect(new PotionEffect(PotionEffectType.POISON, 10, 1), true);
+                    p.addPotionEffect(new PotionEffect(PotionEffectType.POISON, 10, 2), false);
                 }
             }
         }
     }
-
+    
     @EventHandler
     public void onInventoryClick(InventoryClickEvent e) {
-        if (e.getSlotType().equals(SlotType.ARMOR)) {
-            if (e.getCurrentItem().getType().equals(Material.WOOL)) {
+        if (e.getWhoClicked() instanceof Player) {
+            Player p = (Player) e.getWhoClicked();
+            if (pl.ingameList.containsKey(p)) {
+                if (e.getSlotType().equals(SlotType.ARMOR)) {
+                    if (e.getCurrentItem().getType().equals(Material.WOOL)) {
+                        e.setCancelled(true);
+                    }
+                }
+            } else {
                 e.setCancelled(true);
             }
         }
     }
-
+    
     @EventHandler
     public void onInteract(PlayerInteractEvent e) {
         Player p = e.getPlayer();
@@ -243,7 +250,7 @@ public class PlayerListener implements Listener {
                     } else {
                         p.sendMessage(pl.getLang("lang.dontSpamClicks"));
                     }
-
+                    
                 } else if ((e.getAction() == Action.LEFT_CLICK_AIR) || (e.getAction() == Action.LEFT_CLICK_BLOCK)) {
                     if (!pl.interactCD.contains(p)) {
                         p.teleport(pl.spectators.get(p).subN().getLocation().add(0, 2, 0));
@@ -280,7 +287,7 @@ public class PlayerListener implements Listener {
             }
         }
     }
-
+    
     @EventHandler
     public void onFoodChange(FoodLevelChangeEvent e) {
         if (e.getEntity() instanceof Player) {
@@ -290,7 +297,7 @@ public class PlayerListener implements Listener {
             }
         }
     }
-
+    
     @EventHandler
     public void onTeleport(PlayerTeleportEvent e) {
         Player p = e.getPlayer();
@@ -300,7 +307,7 @@ public class PlayerListener implements Listener {
             }
         }
     }
-
+    
     @EventHandler
     public void onDeath(PlayerDeathEvent e) {
         Player p = e.getEntity();
@@ -317,7 +324,7 @@ public class PlayerListener implements Listener {
         }
         e.setDeathMessage("");
     }
-
+    
     @EventHandler
     public void onRespawn(PlayerRespawnEvent e) {
         Player p = e.getPlayer();
@@ -344,7 +351,7 @@ public class PlayerListener implements Listener {
             }
         }
     }
-
+    
     @EventHandler(priority = EventPriority.HIGHEST)
     public void onChat(AsyncPlayerChatEvent e) {
         Player sender = e.getPlayer();
@@ -352,7 +359,7 @@ public class PlayerListener implements Listener {
         e.setCancelled(true);
         executeChat(sender, msg);
     }
-
+    
     private void checkIngameThings(Player p) {
         if (pl.queue.containsKey(p)) {
             pl.removePlayerFromQueue(p);
@@ -379,7 +386,7 @@ public class PlayerListener implements Listener {
             }
         }
     }
-
+    
     private void executeChat(Player sender, String msg) {
         String message = pl.getLang("lang.chat.general").replaceAll("%name", sender.getDisplayName()).replaceAll("%message", msg);
         if (pl.spectators.containsKey(sender)) {
@@ -411,7 +418,7 @@ public class PlayerListener implements Listener {
             pl.getLogger().log(Level.INFO, message);
         }
     }
-
+    
     private String getTeamName(int team) {
         if (team == 1) {
             return pl.getLang("lang.chat.blueTeam");
@@ -419,9 +426,9 @@ public class PlayerListener implements Listener {
             return pl.getLang("lang.chat.redTeam");
         }
     }
-
+    
     private Location getTeamSpawn(Player p) {
-        if(pl.ingameList.get(p).getTeam() == 1) {
+        if (pl.ingameList.get(p).getTeam() == 1) {
             Location l = pl.blueDeploy;
             return l.subtract(0, 1, 0);
         } else {
@@ -429,29 +436,29 @@ public class PlayerListener implements Listener {
             return l.subtract(0, 1, 0);
         }
     }
-
+    
     private class InteractCDRunnable implements Runnable {
-
+        
         private final Player p;
-
+        
         public InteractCDRunnable(Player p) {
             this.p = p;
         }
-
+        
         @Override
         public void run() {
             pl.interactCD.remove(p);
         }
     }
-
+    
     private class ForceStaffRunnable extends BukkitRunnable {
-
+        
         private final Player p;
-
+        
         public ForceStaffRunnable(Player p) {
             this.p = p;
         }
-
+        
         @Override
         public void run() {
             Vector vec = p.getLocation().getDirection();
@@ -461,61 +468,61 @@ public class PlayerListener implements Listener {
             p.setVelocity(vec);
         }
     }
-
+    
     private class ForceEffectRunnable extends BukkitRunnable {
-
+        
         private final Player p;
-
+        
         public ForceEffectRunnable(Player p) {
             this.p = p;
         }
-
+        
         @Override
         public void run() {
             pl.smokeEffect(p.getLocation(), 10);
         }
     }
-
+    
     private class ForceStopRunnable extends BukkitRunnable {
-
+        
         private final Player p;
-
+        
         public ForceStopRunnable(Player p) {
             this.p = p;
         }
-
+        
         @Override
         public void run() {
             pl.getServer().getScheduler().cancelTask(pl.forcingStaff.get(p));
             pl.forcingStaff.remove(p);
         }
     }
-
+    
     private class RespawnEffectRunnable implements Runnable {
-
+        
         private final Player p;
         private final Location respawnLoc;
-
+        
         public RespawnEffectRunnable(Player p, Location respawnLoc) {
             this.p = p;
             this.respawnLoc = respawnLoc;
         }
-
+        
         @Override
         public void run() {
             pl.breakEffect(respawnLoc, 2, 18);
-
+            
         }
     }
-
+    
     private class RespawnStopRunnable implements Runnable {
-
+        
         private final Player p;
-
+        
         public RespawnStopRunnable(Player p) {
             this.p = p;
         }
-
+        
         @Override
         public void run() {
             pl.getServer().getScheduler().cancelTask(pl.respawning.get(p));
